@@ -1,3 +1,9 @@
+2014-02-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/stm8/gen.c,
+	  support/regression/tests/bug-2253.c:
+	  Fix and improve division and multiplication, includes fix for #2253.
+
 2014-02-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/stm8/gen.c,
